--- a/app/index.html
+++ b/app/index.html
@@ -183,6 +183,15 @@
         </section>
     </main>
     <footer class="footer">
+        <p><b>Share:</b></p>
+        <p>
+            <a class="share-btn share-btn--fb" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsavinglivesunderground.thesyriacampaign.org">
+                Facebook
+            </a>
+            <a class="share-btn share-btn--twitter" href="https://www.twitter.com/share?text=Saving%20Lives%20Underground.%20https%3A%2F%2Fsavinglivesunderground.thesyriacampaign.org">
+                Twitter
+            </a>
+        </p>
         <img class="footer-logo" src="images/logos/ha.png" />
         <img class="footer-logo" src="images/logos/hih.png" />
         <img class="footer-logo" src="images/logos/ida.png" />
