Download link and share buttons

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
                     Syrian medical organizations and The Syria Campaign
                 </p>
                 <h3>
-                    <a class="download-link" href="">&raquo; Download</a>
+                    <a class="download-link" href="Saving%20Lives%20Underground%20report.pdf">&raquo; Download</a>
                 </h3>
             </div>
         </div>
@@ -185,10 +185,10 @@
     <footer class="footer">
         <p><b>Share:</b></p>
         <p>
-            <a class="share-btn share-btn--fb" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsavinglivesunderground.thesyriacampaign.org">
+            <a class="share-btn share-btn--fb" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsavinglivesunderground.thesyriacampaign.org">
                 Facebook
             </a>
-            <a class="share-btn share-btn--twitter" href="https://www.twitter.com/share?text=Saving%20Lives%20Underground.%20https%3A%2F%2Fsavinglivesunderground.thesyriacampaign.org">
+            <a class="share-btn share-btn--twitter" target="_blank" href="https://www.twitter.com/share?text=Saving%20Lives%20Underground.%20https%3A%2F%2Fsavinglivesunderground.thesyriacampaign.org">
                 Twitter
             </a>
         </p>
