Use cloudfront link

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
                     Syrian medical organizations and The Syria Campaign
                 </p>
                 <h3>
-                    <a class="download-link" href="Saving%20Lives%20Underground%20report.pdf">&raquo; Download</a>
+                    <a class="download-link" href="https://d1p8u7ytnu6qui.cloudfront.net/Saving%20Lives%20Underground%20report.pdf">&raquo; Download</a>
                 </h3>
             </div>
         </div>
