--- a/app/index.html
+++ b/app/index.html
@@ -188,7 +188,7 @@
             <a class="share-btn share-btn--fb" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsavinglivesunderground.thesyriacampaign.org">
                 Facebook
             </a>
-            <a class="share-btn share-btn--twitter" target="_blank" href="https://www.twitter.com/share?text=Saving%20Lives%20Underground.%20https%3A%2F%2Fsavinglivesunderground.thesyriacampaign.org">
+            <a class="share-btn share-btn--twitter" target="_blank" href="https://www.twitter.com/intent/tweet?text=Saving%20Lives%20Underground.%20https%3A%2F%2Fsavinglivesunderground.thesyriacampaign.org&url=https%3A%2F%2Fsavinglivesunderground.thesyriacampaign.org">
                 Twitter
             </a>
         </p>
