--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,20 @@
     <title>Saving lives underground</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,800" rel="stylesheet">
     <link href="style.css" rel="stylesheet" />
+
+    <!-- TWITTER -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="http://savinglivesunderground.thesyriacampaign.org">
+    <meta name="twitter:title" content="Saving Lives Underground">
+    <meta name="twitter:description" content="Field hospitals in Syria have been driven underground, in basements, and into caves - and they are saving the lives of medics and patients. Read the report from 13 leading Syrian medical organizations and The Syria Campaign">
+    <meta name="twitter:image" content="http://savinglivesunderground.thesyriacampaign.org/images/logo.png">
+
+    <!-- FACEBOOK -->
+    <meta property="og:title" content="Saving Lives Underground">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="http://savinglivesunderground.thesyriacampaign.org/images/logo.png">
+    <meta property="og:url" content="http://savinglivesunderground.thesyriacampaign.org">
+    <meta property="og:description" content="Field hospitals in Syria have been driven underground, in basements, and into caves - and they are saving the lives of medics and patients. Read the report from 13 leading Syrian medical organizations and The Syria Campaign">
 </head>
 <body>
     <nav class="nav">
