--- a/app/index.html
+++ b/app/index.html
@@ -199,10 +199,10 @@
     <footer class="footer">
         <p><b>Share:</b></p>
         <p>
-            <a class="share-btn share-btn--fb" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsavinglivesunderground.thesyriacampaign.org">
+            <a class="share-btn share-btn--fb" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsavinglivesunderground.thesyriacampaign.org">
                 Facebook
             </a>
-            <a class="share-btn share-btn--twitter" target="_blank" href="https://www.twitter.com/intent/tweet?text=Saving%20Lives%20Underground.&url=https%3A%2F%2Fsavinglivesunderground.thesyriacampaign.org">
+            <a class="share-btn share-btn--twitter" target="_blank" href="https://www.twitter.com/intent/tweet?text=Saving%20Lives%20Underground.&url=http%3A%2F%2Fsavinglivesunderground.thesyriacampaign.org">
                 Twitter
             </a>
         </p>
